# proxmox_znc

./: Cargo.toml  README.md  proxmox-znc.sh
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: banner.rs  cli.rs  constants.rs  main.rs  process.rs  prompt.rs  spec.rs  storage.rs
