[package]
name = "proxmox-znc"
version = "0.1.0-alpha.10"
edition = "2021"
description = "Interactive Proxmox LXC installer for a basic ZNC bounce"
license = "MIT"

[dependencies]
dialoguer = "0.12.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false
